/*
 * $Id: ChangeLog,v 1.1769 2003/11/26 03:21:42 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-26 06:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/vm/hvm.c
  * source/vm/thread.c
  * source/vm/garbage.c
  * include/thread.c
    ! Fix and optimization of threading model; Isomorphic model between all
      architectures is now achieved.

  * include/hbapi.c
    - Removed now useless gcInit() and gcExit()

  * mtgc.c
    + Added a parameter to do checks without screen printouts (more speed,
      more contention, more stress test!)

2003-11-26 06:10 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/vm/fm.c
  * source/vm/hvm.c
  * source/compiler/harbour.c
  * source/compiler/harbour.sly
    * Use stdlib.h instead of malloc.h on BSD.
    ! Some syntax errors (non-portable missing semicolons before
      closing braces) in harbour.sly fixed.
  * source/rtl/hbserv.c
  * source/rtl/seconds.c
    * Made it compile on BSD.

2003-11-26 00:58 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * contrib\Whoo\env\bccWin32.Mak
  * contrib\WoopGUI\env\bccWin32.Mak
  * contrib\hbzlib\include\unzip.h
  * contrib\hbzlib\include\zip.h
  * contrib\hbzlib\include\ziparchive.h
  * contrib\hbzlib\include\zipinternalinfo.h
  * contrib\hbzlib\include\zutil.h
  * contrib\hbzlib\ziparchive.cpp
  * hrbdll.bc
  * hrbdll.vc
  * tests\compress.prg
  * tests\service.prg
    * all fixed to sync with last changes from Lorenzo Fiorini and others

2003-11-25 02:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbf1.c
    ! hack on hack in hack :-) for exclusive mode. We definitely
      have to clean error codes some days

  - xharbour/contrib/libct/invertwin.prg
  + xharbour/contrib/libct/invrtwin.prg
  * xharbour/contrib/libct/Makefile