@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1769 2003/11/26 03:21:42 likewolf Exp $
+ * $Id: ChangeLog,v 1.1770 2003/11/26 05:44:00 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-11-26 07:33 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * source/vm/hvm.c
+    * cleanup of comments and refininf of code.
 
 2003-11-26 06:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/hvm.c
